# bsuir-coursework-3-semester

./: .gitignore  README.md
note/sources/: Dockerfile  Makefile  README.md
note/sources/.docker_build/: mtp2lite.deb
note/sources/note/: fonts_linux.tex  note.aux  note.bbl  note.blg  note.fdb_latexmk  note.fls  note.out  note.tex  note.toc  preamble.tex  table_of_contents.tex  task.tex  title.tex
note/sources/note/attachments/: data.sql  db.sql  main.cpp.gen
note/sources/note/sections/: 00_introduction.tex  01_analysis.tex  02_proecting.tex  03_realization.tex  0A_conclusion.tex  0A_listing.tex  0B_references.tex  0B_sceheme.tex  aaaa.tex
program/: CMakeLists.txt  Utils.cpp  Utils.h  main.cpp  station.db
program/model/: Admin.h  Database.h  Entity.h  System.h  User.h
program/model/Admin/: Admin.cpp
program/model/Database/: Database.cpp
program/model/Entity/: Entity.cpp
program/model/System/: System.cpp
program/model/User/: User.cpp
